css/main.css
/* ... */
.card > .card-content{
  margin-top: -5px;
  padding:15px 10px;
}
.card > .card-content .caption{
  position: relative;
  max-height: 45px;
  width: 50%;
  overflow: hidden;
}
.card > .card-content .caption h3, .card > .card-content .caption p{
  overflow: hidden;
  -ms-text-overflow: ellipsis;
  text-overflow: ellipsis;
  max-height: 50px;
  margin-top: 3px;
}
.card > .card-content .caption h3{
  color: #4CAF50;
}
.card > .card-content .caption ~ .layout-flex{
  width: 40px;
}
.card .caption p span{
  display: none;
}
.card.preview{
  position: fixed;
  width: 600px; height: 530px;
  z-index: 999;
  top: calc(50% - 260px);left: calc(50vw - 300px);
}
.card.preview img{
  height: 350px;
}
.card.preview > .card-content .caption{
  max-height: 160px;
  padding: 0 10px;
}
.card.preview .caption p span{
  display: inline;
}
.card.preview > .card-content .caption h3{
  font-size: 22px;
  margin-bottom: 18px;
}
.card.preview > .card-content .caption h3, .card.preview > .card-content .caption p{
  max-height: 150px;
  margin-top: 3px;
  text-align: justify;
}
.card.preview > .card-content .caption ~ .layout-flex{
  display: none;
}

@media all and (max-width: 992px){
  .card.preview{
    position: fixed;
    width: 100%; height: 100vh;
    z-index: 999;
    top: 0;left: 0;
    overflow-y:auto;
    background: #f7f7f7;
  }
  .card.preview img{
    height: 50%;
    min-height: 350px;
  }
  .card.preview > .card-content .caption{
    padding: 20px;
    max-height: 1000px;
    margin: 0 5px;
    background: #fff;

    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
              0 1px 2px 0 rgba(0, 0, 0, 0.12),
              0 1px 1px -2px rgba(0, 0, 0, 0.2);
  }
  .card.preview > .card-content .caption h3{
    padding-bottom: 10px;
    border-bottom: 1px solid #ddd;
    margin-bottom: 15px;
  }
  .card.preview > .card-content .caption h3, .card.preview > .card-content .caption p{
    max-height: 1000px;
    text-align: none;
  }
}
/*END CARDS

/*GRID SYSTEM*/
.row{
  margin-top: 10px;
  width: 100%;
}
.col{
  display: inline-block;
  margin-left: 1px;
  padding: 3px;
  overflow: hidden;
}
@media all and (max-width: 992px){
  .col{
    padding: 15px;
    display: block;
    width: calc(100% - 30px) !important;
  }
}
.col.col-1{
  width: calc(8.333% - 10px);
}
.col.col-2{
  width: calc(16.667% - 10px);
}
.col.col-3{
  width: calc(25% - 10px);
}
.col.col-4{
  width: calc(33.333% - 10px);
}
.col.col-6{
  width: calc(50% - 10px);
}
.col.col-7{
  width: calc(58.333% - 10px);
}
.col.col-8{
  width: calc(66.667% - 10px);
}
.col.col-9{
  width: calc(75% - 10px);
}
.col.col-10{
  width: calc(83.333% - 10px);
}
.col.col-11{
  width: calc(91.667% - 10px);
}
.col.col-12{
  width: calc(100% - 10px);
}
/*END GRID SYSTEM*/

/*SOCIAL ICONS*/
.social-icons{
  margin-top: 15px;
}
.social-icons > .avatar{
  position: relative;
  margin-left: 10px;
}
.social-icons > .avatar:before{
  content: "";
  position: absolute;
  top: 0;left: 0;
  width: 100%;height: 100%;
  transform: rotateX(90deg) perspective(1000px);
  transition: transform 0.15s linear;
}
.social-icons > .avatar:hover:before{
  transform: none;
}
.social-icons > .fb:before{
  background: #3f51b5;
}
.social-icons > .twitter:before{
  background: #00bcd4;
}
.social-icons > .insta:before{
  background: #2196f3;
}
.social-icons > .gplus:before{
  background: #b71c1c;
}
.social-icons > .avatar:first-child{
  margin-left: 0;
}
.social-icons > .avatar span{
  z-index: 9;
}
.social-icons > .avatar:hover span{
  z-index: 9;
  color: #fff;
}
/*END SOCIAL ICONS*/
#home-banner{
  background: url(../images/bcs.png); 
  background-size: cover;
  background-position: top center;
  widt:95%;lef:3.5%;margin-top: -10px; min-height: 350px;padding: 15px 0; margin-bottom: 50px;"
}
/*GALLERY*/
#gallery > img{
  width: 33%;
  height: 200px;
  margin-right: 0.333%;
  margin-bottom: 5px;
  cursor: pointer;
  transition: transform 0.25s ease-out;
  background: rgba(0,0,0,0.07);
}
#gallery img:hover{
  transform: scale(1.01);
  box-shadow: 0 0 10px 1px rgba(0,0,0,0.6);
}
.preview-image{
  position: fixed;
  top: 0; bottom: 30px;
  left: 0; right: 0;
  margin: auto;
  z-index: 9999;
  opacity: 0;
  pointer-events: none;

  transition: all 0.2s ease-in-out;
}
.preview-image.preview{
  width: auto;
  max-width: 70%;
  height: auto;
  max-height: calc(100% - 160px);
  pointer-events: auto;
  opacity: 1;
}
@media all and (max-width: 992px){
  .preview-image{
    /*somethin*/
  }
  .preview-image.preview{
    bottom: 0;
    width: 100%;
    max-width: 100%;
    min-height: 50%;
    max-height: 100%;
    height: auto;
    max-height: 100%;
  }
}
#caption{
  position: fixed;
  left: 0; bottom: 10px;
  width: 100%;
  color: #fff;
  height: 60px;
  line-height: 60px;
  font-size: 20px;
  text-align: center;
  z-index: 999999999;
  pointer-events: none;
  opacity: 0;
  text-shadow: 1px 1px 5px rgba(0,0,0,0.5);
  font-family: sans-serif;
}
@media all and (max-width: 992px){
  #caption{
    position: fixed;
    left: 50px; top:0;
    width: calc(100% - 105px);
    text-align: left;
    padding-right: 10px;
    overflow: hidden;
    -ms-text-overflow: ellipsis;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}
#shadow.darkened ~ #caption{
  pointer-events: auto;
  opacity: 1;
}
@media all and (max-width: 600px){
  #gallery{
    margin-top: -15px;
  }
  #gallery img{
    width: calc(50% - 4px);
    margin: 2px 2px;
    transition: none;
  }
  #gallery img:hover{
    transform: none;
    box-shadow: none;
  }
}
#slide-show-container{
  position: fixed;
  top: 0; left: 0;
  bottom: 0; right: 0;
  /*background: red;*/
  z-index: 99999999999;
  pointer-events: none;
  opacity: 0;
}
#slide-show-container.preview{
  /*pointer-events: auto;*/
  opacity: 1;
}
#slide-show-container > img{
  position: absolute;
  top: 0; bottom: 0;
  left: 0; right: 0;
  margin: auto;
  max-width: 70%;
  height: auto;
  min-height: 50%;
  max-height: calc(100% - 160px);
  opacity: 0;
  transform: translateX(100%);
}
/* ... */

